2011-06-03  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* ntdll.h (FILE_PIPE_*): Define constants.
	* select.cc (pipe_data_available): Detect closing state.

2011-06-03  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* pinfo.cc (_pinfo::set_ctty): Don't reset myself->{pgid,sid} if
	terminal has no pgid or sid settings.

2011-06-03  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* fhandler.cc (fhandler_base_overlapped::wait_overlapped): Only raise
	SIGPIPE when writing.

	* fhandler.h: Include "tty.h".
	(fhandler_termios::_tc): Rename from tc.
	(fhandler_termios::tc): New method.
	(fhandler_termios::tcinit): Remove an argument.
	(fhandler_termios::get_ttyp): Use method to retrieve value.
	(fhandler_console::console_state): Move here.
	(fhandler_console::dev_state): Delete.
	(fhandler_console::shared_console_info): Define.
	(fhandler_console::open_shared_console): Move this function under
	fhandler_console umbrella.
	(fhandler_console::tc): Define.  Return static value.
	(fhandler_console::focus_aware): Accommodate deletion of dev_state.
	(fhandler_console): Add tty_list::get_cttyp as a friend.
	* fhandler_console.cc (dev_state): Redefine as a pointer within
	shared_console_info and change dev-> to dev. throughout.
	(fhandler_console::shared_console_info): Move into fhandler_console.
	(fhandler_console::open_shared_console): Move into fhandler_console
	change argument to simple bool.
	(enum_windows): Accommodate changes to console_state and
	open_shared_console.
	(console_unit::console_unit): Ditto.
	(fhandler_console::get_tty_stuff): Accommodate change to dev_state.
	(tty_list::get_cttyp): Accommodate change to
	handler_console::shared_console_info.
	(fhandler_console::read): Accommodate change from tc to tc ().
	(fhandler_console::set_input_state): Ditto.
	(fhandler_console::open): Accommodate tcinit argument change and change
	from tc to tc().
	(fhandler_console::input_tcsetattr): Accomodate change from tc to tc().
	(fhandler_console::input_tcsetattr): Ditto.